# infoproc-bdpan-toolkit-v2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
docs/: audit-and-retention.md  bootstrap.md  commands.md  directories.md  environment.md  install.md  overview.md  release-checklist.md  release-plan.md  workflow.md
examples/: README.md  no_valid_text.example.json  remote_input_index.example.json
examples/audit/: README.md  no_valid_text_report.example.json  run_audit_summary.example.json  upload_verification.example.json
examples/jobs/: README.md  remote_first_job.example.json  remote_roots.example.json
examples/pointers/: README.md  REMOTE_POINTER.example.json
examples/release/: README.md  release_manifest.example.json
scripts/: README.md  generate_remote_pointer.py  infoproc_remote_first.sh  prune_run_cache.py  summarize_run_audit.py
scripts/ops/: README.md
scripts/release/: README.md  bootstrap_repo.sh  build_release_bundle.sh  build_release_zip.sh  package_release.py
specs/: audit-model.md  empty-transcript-policy.md  remote-storage-model.md
