[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infoproc-bdpan-toolkit-v2"
dynamic = ["version"]
description = "Remote-first media processing and Baidu Netdisk operations toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "wuxiaoran" }
]
keywords = ["infoproc", "baidupan", "bypy", "transcription", "remote-first", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["build>=1.2", "twine>=5.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
